crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_struct_array_of_struct.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

/// Generated by `zerodds-idl-rust` from IDL.
#[allow(non_snake_case)]
#[derive(Debug, Clone, PartialEq, Default)]
pub struct Point {
    pub x: i32,
    pub y: i32,
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_dcps::DdsType for Point {
    const TYPE_NAME: &'static str = "Point";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Appendable;
    const IS_NESTED: bool = true;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0xd3, 0xcf, 0x22, 0x36, 0xfd, 0x15, 0xe5, 0x0f, 0x28, 0x71, 0x34, 0x46, 0xf8, 0x0a]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.x, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.y, w)?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn encode_be(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.x, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.y, w)?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            let x = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
            let y = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
            Ok(Self {
                x,
                y,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn decode_be(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            let x = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
            let y = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
            Ok(Self {
                x,
                y,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn encode_xcdr1(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrEncode>::encode(self, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode_xcdr1(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrDecode>::decode(&mut reader).map_err(::core::convert::Into::into)
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_dcps::FilterValue> {
        match path {
            "x" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Int(self.x as i64)),
            "y" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Int(self.y as i64)),
            _ => ::core::option::Option::None,
        }
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrEncode for Point {
    fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        if writer.max_alignment() == 4 {
            zerodds_cdr::struct_enc::encode_appendable(writer, |w| {
                <_ as zerodds_cdr::CdrEncode>::encode(&self.x, w)?;
                <_ as zerodds_cdr::CdrEncode>::encode(&self.y, w)?;
                Ok(())
            })?;
        } else {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.x, writer)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.y, writer)?;
        }
        ::core::result::Result::Ok(())
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrDecode for Point {
    fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        if reader.max_alignment() == 4 {
            zerodds_cdr::struct_enc::decode_appendable(reader, |r| {
                let x = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
                let y = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
                ::core::result::Result::Ok(Self {
                    x,
                    y,
                })
            })
        } else {
            let x = <i32 as zerodds_cdr::CdrDecode>::decode(reader)?;
            let y = <i32 as zerodds_cdr::CdrDecode>::decode(reader)?;
            ::core::result::Result::Ok(Self {
                x,
                y,
            })
        }
    }
}

/// Generated by `zerodds-idl-rust` from IDL.
#[allow(non_snake_case)]
#[derive(Debug, Clone, PartialEq, Default)]
pub struct Shapes {
    pub shape: [Point; 2],
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_dcps::DdsType for Shapes {
    const TYPE_NAME: &'static str = "Shapes";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Appendable;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0xb5, 0xbf, 0x6a, 0x1f, 0xad, 0x87, 0xbc, 0x27, 0x2a, 0xb3, 0xae, 0x0c, 0x9d, 0xb4]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.shape, w)?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn encode_be(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.shape, w)?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            let shape = { if zerodds_cdr::BufferReader::max_alignment(r) == 4 { let _ = zerodds_cdr::BufferReader::read_u32(r)?; } let mut __arr: ::std::vec::Vec<Point> = ::std::vec::Vec::with_capacity(2); for _ in 0..2 { __arr.push(<Point as zerodds_cdr::CdrDecode>::decode(r)?); } let __arr: [Point; 2] = __arr.try_into().map_err(|v: ::std::vec::Vec<Point>| zerodds_cdr::DecodeError::LengthExceeded { announced: 2, remaining: v.len(), offset: 0 })?; __arr };
            Ok(Self {
                shape,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn decode_be(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            let shape = { if zerodds_cdr::BufferReader::max_alignment(r) == 4 { let _ = zerodds_cdr::BufferReader::read_u32(r)?; } let mut __arr: ::std::vec::Vec<Point> = ::std::vec::Vec::with_capacity(2); for _ in 0..2 { __arr.push(<Point as zerodds_cdr::CdrDecode>::decode(r)?); } let __arr: [Point; 2] = __arr.try_into().map_err(|v: ::std::vec::Vec<Point>| zerodds_cdr::DecodeError::LengthExceeded { announced: 2, remaining: v.len(), offset: 0 })?; __arr };
            Ok(Self {
                shape,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn encode_xcdr1(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrEncode>::encode(self, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode_xcdr1(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrDecode>::decode(&mut reader).map_err(::core::convert::Into::into)
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_dcps::FilterValue> {
        match path {
            _ => ::core::option::Option::None,
        }
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrEncode for Shapes {
    fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        if writer.max_alignment() == 4 {
            zerodds_cdr::struct_enc::encode_appendable(writer, |w| {
                <_ as zerodds_cdr::CdrEncode>::encode(&self.shape, w)?;
                Ok(())
            })?;
        } else {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.shape, writer)?;
        }
        ::core::result::Result::Ok(())
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrDecode for Shapes {
    fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        if reader.max_alignment() == 4 {
            zerodds_cdr::struct_enc::decode_appendable(reader, |r| {
                let shape = { if zerodds_cdr::BufferReader::max_alignment(r) == 4 { let _ = zerodds_cdr::BufferReader::read_u32(r)?; } let mut __arr: ::std::vec::Vec<Point> = ::std::vec::Vec::with_capacity(2); for _ in 0..2 { __arr.push(<Point as zerodds_cdr::CdrDecode>::decode(r)?); } let __arr: [Point; 2] = __arr.try_into().map_err(|v: ::std::vec::Vec<Point>| zerodds_cdr::DecodeError::LengthExceeded { announced: 2, remaining: v.len(), offset: 0 })?; __arr };
                ::core::result::Result::Ok(Self {
                    shape,
                })
            })
        } else {
            let shape = { if zerodds_cdr::BufferReader::max_alignment(reader) == 4 { let _ = zerodds_cdr::BufferReader::read_u32(reader)?; } let mut __arr: ::std::vec::Vec<Point> = ::std::vec::Vec::with_capacity(2); for _ in 0..2 { __arr.push(<Point as zerodds_cdr::CdrDecode>::decode(reader)?); } let __arr: [Point; 2] = __arr.try_into().map_err(|v: ::std::vec::Vec<Point>| zerodds_cdr::DecodeError::LengthExceeded { announced: 2, remaining: v.len(), offset: 0 })?; __arr };
            ::core::result::Result::Ok(Self {
                shape,
            })
        }
    }
}
