crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_struct_full_primitive_set.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
assertion_line: 45
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

/// Generated by `zerodds-idl-rust` from IDL.
#[derive(Debug, Clone, PartialEq, Default)]
pub struct AllPrimitives {
    pub i8: i8,
    pub u8: u8,
    pub s: i16,
    pub us: u16,
    pub l: i32,
    pub ul: u32,
    pub ll: i64,
    pub ull: u64,
    pub f: f32,
    pub d: f64,
    pub b: bool,
    pub o: u8,
    pub c: char,
}

impl zerodds_dcps::DdsType for AllPrimitives {
    const TYPE_NAME: &'static str = "AllPrimitives";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Final;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0x28, 0xf4, 0x80, 0x83, 0x96, 0x76, 0x3f, 0x49, 0xd7, 0xb3, 0x5f, 0xd5, 0x81, 0xf8]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <_ as zerodds_cdr::CdrEncode>::encode(&self.i8, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.u8, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.s, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.us, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.l, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.ul, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.ll, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.ull, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.f, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.d, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.b, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.o, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.c, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        let i8 = <i8 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let u8 = <u8 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let s = <i16 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let us = <u16 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let l = <i32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let ul = <u32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let ll = <i64 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let ull = <u64 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let f = <f32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let d = <f64 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let b = <bool as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let o = <u8 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let c = <char as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        Ok(Self {
            i8,
            u8,
            s,
            us,
            l,
            ul,
            ll,
            ull,
            f,
            d,
            b,
            o,
            c,
        })
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_sql_filter::Value> {
        match path {
            "i8" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.i8 as i64)),
            "u8" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.u8 as i64)),
            "s" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.s as i64)),
            "us" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.us as i64)),
            "l" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.l as i64)),
            "ul" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.ul as i64)),
            "ll" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.ll as i64)),
            "ull" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.ull as i64)),
            "f" => ::core::option::Option::Some(zerodds_sql_filter::Value::Float(self.f as f64)),
            "d" => ::core::option::Option::Some(zerodds_sql_filter::Value::Float(self.d)),
            "b" => ::core::option::Option::Some(zerodds_sql_filter::Value::Bool(self.b)),
            "o" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.o as i64)),
            "c" => ::core::option::Option::Some(zerodds_sql_filter::Value::Int(self.c as i64)),
            _ => ::core::option::Option::None,
        }
    }
}
