crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_struct_with_any_field.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

/// Generated by `zerodds-idl-rust` from IDL.
#[allow(non_snake_case)]
#[derive(Debug, Clone, PartialEq, Default)]
pub struct Envelope {
    pub topic: String,
    pub payload: zerodds_dcps::DdsAny,
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_dcps::DdsType for Envelope {
    const TYPE_NAME: &'static str = "Envelope";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Appendable;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::None;

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.topic, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.payload, w)?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn encode_be(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.topic, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.payload, w)?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            let topic = <String as zerodds_cdr::CdrDecode>::decode(r)?;
            let payload = <zerodds_dcps::DdsAny as zerodds_cdr::CdrDecode>::decode(r)?;
            Ok(Self {
                topic,
                payload,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn decode_be(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            let topic = <String as zerodds_cdr::CdrDecode>::decode(r)?;
            let payload = <zerodds_dcps::DdsAny as zerodds_cdr::CdrDecode>::decode(r)?;
            Ok(Self {
                topic,
                payload,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn encode_xcdr1(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrEncode>::encode(self, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode_xcdr1(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrDecode>::decode(&mut reader).map_err(::core::convert::Into::into)
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_dcps::FilterValue> {
        match path {
            "topic" => ::core::option::Option::Some(zerodds_dcps::FilterValue::String(self.topic.clone())),
            _ => ::core::option::Option::None,
        }
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrEncode for Envelope {
    fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        if writer.max_alignment() == 4 {
            zerodds_cdr::struct_enc::encode_appendable(writer, |w| {
                <_ as zerodds_cdr::CdrEncode>::encode(&self.topic, w)?;
                <_ as zerodds_cdr::CdrEncode>::encode(&self.payload, w)?;
                Ok(())
            })?;
        } else {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.topic, writer)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.payload, writer)?;
        }
        ::core::result::Result::Ok(())
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrDecode for Envelope {
    fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        if reader.max_alignment() == 4 {
            zerodds_cdr::struct_enc::decode_appendable(reader, |r| {
                let topic = <String as zerodds_cdr::CdrDecode>::decode(r)?;
                let payload = <zerodds_dcps::DdsAny as zerodds_cdr::CdrDecode>::decode(r)?;
                ::core::result::Result::Ok(Self {
                    topic,
                    payload,
                })
            })
        } else {
            let topic = <String as zerodds_cdr::CdrDecode>::decode(reader)?;
            let payload = <zerodds_dcps::DdsAny as zerodds_cdr::CdrDecode>::decode(reader)?;
            ::core::result::Result::Ok(Self {
                topic,
                payload,
            })
        }
    }
}
