crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_struct_with_array_dimensions.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
assertion_line: 125
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

#![allow(clippy::too_many_lines)]
#![allow(unused_imports)]

use zerodds_cdr::{BufferReader, BufferWriter, CdrDecode, CdrEncode, DecodeError, EncodeError, Endianness};

/// Generated by `zerodds-idl-rust` from IDL.
#[derive(Debug, Clone, PartialEq, Default)]
pub struct Matrix3x3 {
    pub cells: [[f64; 3]; 3],
}

impl zerodds_dcps::DdsType for Matrix3x3 {
    const TYPE_NAME: &'static str = "Matrix3x3";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Final;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0xbb, 0xa0, 0xe4, 0x5d, 0xe4, 0x19, 0xe5, 0xec, 0x6d, 0x5e, 0xaf, 0x4b, 0x4c, 0xd0]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <_ as zerodds_cdr::CdrEncode>::encode(&self.cells, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        let cells = <f64 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        Ok(Self {
            cells,
        })
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_sql_filter::Value> {
        match path {
            _ => ::core::option::Option::None,
        }
    }
}
