crates/idl-rust/tests/snapshots/snapshot_codegen__snapshot_struct_with_field_value_filter_paths.snap
---
source: crates/idl-rust/tests/snapshot_codegen.rs
expression: run(idl)
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

/// Generated by `zerodds-idl-rust` from IDL.
#[allow(non_snake_case)]
#[derive(Debug, Clone, PartialEq, Default)]
pub struct SensorReading {
    pub sensor_id: i32,
    pub value: f64,
    pub label: String,
    pub valid: bool,
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_dcps::DdsType for SensorReading {
    const TYPE_NAME: &'static str = "SensorReading";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Appendable;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0x55, 0x0f, 0x86, 0xad, 0x95, 0x43, 0x0b, 0x7b, 0x4c, 0x54, 0x58, 0x97, 0xa3, 0xa3]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.sensor_id, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.value, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.label, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.valid, w)?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn encode_be(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.sensor_id, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.value, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.label, w)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.valid, w)?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            let sensor_id = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
            let value = <f64 as zerodds_cdr::CdrDecode>::decode(r)?;
            let label = <String as zerodds_cdr::CdrDecode>::decode(r)?;
            let valid = <bool as zerodds_cdr::CdrDecode>::decode(r)?;
            Ok(Self {
                sensor_id,
                value,
                label,
                valid,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn decode_be(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            let sensor_id = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
            let value = <f64 as zerodds_cdr::CdrDecode>::decode(r)?;
            let label = <String as zerodds_cdr::CdrDecode>::decode(r)?;
            let valid = <bool as zerodds_cdr::CdrDecode>::decode(r)?;
            Ok(Self {
                sensor_id,
                value,
                label,
                valid,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn encode_xcdr1(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrEncode>::encode(self, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode_xcdr1(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrDecode>::decode(&mut reader).map_err(::core::convert::Into::into)
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_dcps::FilterValue> {
        match path {
            "sensor_id" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Int(self.sensor_id as i64)),
            "value" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Float(self.value)),
            "label" => ::core::option::Option::Some(zerodds_dcps::FilterValue::String(self.label.clone())),
            "valid" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Bool(self.valid)),
            _ => ::core::option::Option::None,
        }
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrEncode for SensorReading {
    fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        if writer.max_alignment() == 4 {
            zerodds_cdr::struct_enc::encode_appendable(writer, |w| {
                <_ as zerodds_cdr::CdrEncode>::encode(&self.sensor_id, w)?;
                <_ as zerodds_cdr::CdrEncode>::encode(&self.value, w)?;
                <_ as zerodds_cdr::CdrEncode>::encode(&self.label, w)?;
                <_ as zerodds_cdr::CdrEncode>::encode(&self.valid, w)?;
                Ok(())
            })?;
        } else {
            <_ as zerodds_cdr::CdrEncode>::encode(&self.sensor_id, writer)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.value, writer)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.label, writer)?;
            <_ as zerodds_cdr::CdrEncode>::encode(&self.valid, writer)?;
        }
        ::core::result::Result::Ok(())
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrDecode for SensorReading {
    fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        if reader.max_alignment() == 4 {
            zerodds_cdr::struct_enc::decode_appendable(reader, |r| {
                let sensor_id = <i32 as zerodds_cdr::CdrDecode>::decode(r)?;
                let value = <f64 as zerodds_cdr::CdrDecode>::decode(r)?;
                let label = <String as zerodds_cdr::CdrDecode>::decode(r)?;
                let valid = <bool as zerodds_cdr::CdrDecode>::decode(r)?;
                ::core::result::Result::Ok(Self {
                    sensor_id,
                    value,
                    label,
                    valid,
                })
            })
        } else {
            let sensor_id = <i32 as zerodds_cdr::CdrDecode>::decode(reader)?;
            let value = <f64 as zerodds_cdr::CdrDecode>::decode(reader)?;
            let label = <String as zerodds_cdr::CdrDecode>::decode(reader)?;
            let valid = <bool as zerodds_cdr::CdrDecode>::decode(reader)?;
            ::core::result::Result::Ok(Self {
                sensor_id,
                value,
                label,
                valid,
            })
        }
    }
}
